# whale-sentry

./: .gitignore  README.md  pyproject.toml
configs/: .env.example
data/results/: sandwich_3days_report.md
notebooks/: detection_analysis.ipynb
scripts/: clean_swaps.py  detect_sandwiches.py  detect_wash_trades.py  fetch_swaps.py  generate_visualizations.py
tests/: test_clean_swaps.py  test_sandwich_detection.py  test_sandwich_performance.py  test_smoke.py  test_wash_trade_detection.py
whalesentry/detection/: __init__.py  sandwich.py  wash_trade.py
whalesentry/ingest/: subgraph_client.py  uniswap_v3_swaps.py
whalesentry/models/: swap.py  wash_trade.py
whalesentry/processing/: clean_swaps.py
whalesentry/validation/: __init__.py
